--- a/package.json
+++ b/package.json
@@ -10,18 +10,34 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.13.2",
     "core-js": "^2.6.5",
+    "fastclick": "^1.0.6",
     "vue": "^2.6.10",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
     "@vue/cli-service": "^3.12.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "autoprefixer": {},
+      "postcss-px-to-viewport": {
+        "unitToConvert": "px", 
+        "viewportWidth": 375, 
+        "unitPrecision": 6, 
+        "propList": ["*"], 
+        "viewportUnit": "vw", 
+        "fontViewportUnit": "vw", 
+        "selectorBlackList": ["wrap"], 
+        "minPixelValue": 1, 
+        "mediaQuery": true, 
+        "replace": true, 
+        "landscape": false 
+      }
     }
   },
   "browserslist": [
